<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.DatabaseFragment">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/media_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:title="@string/media_select_all"
        android:id="@+id/selectAll"
        android:icon="@drawable/ic_action_select_all"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:title="@string/media_selection_mode"
        android:id="@+id/select"
        android:icon="@drawable/ic_action_select"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/rearrange"
        android:visible="false"
        android:icon="@drawable/ic_action_rearrange"
        android:title="@string/media_rearrange"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/media_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/name"
                android:title="@string/media_sort_tag" />
            <item android:id="@+id/title"
                android:title="@string/media_sort_title" />
            <item android:id="@+id/type"
                android:title="@string/media_sort_type" />
            <item android:id="@+id/label"
                android:title="@string/media_sort_label" />
            <item android:id="@+id/date"
                android:title="@string/media_sort_date" />
            <item android:id="@+id/often"
                android:title="@string/media_sort_often" />
            <item android:id="@+id/collectionSort"
                android:visible="false"
                android:title="@string/media_sort_collection" />
        </menu>
    </item>

</menu>