<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/dnd"
        android:layout_marginStart="8dp"
        android:id="@+id/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="8dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/checkbox"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start|center_vertical"
            android:gravity="start"
            android:layout_marginStart="-15dp"
            android:id="@+id/radioGroup"
            android:scaleX="0.85"
            android:scaleY="0.85">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:text="@string/off"
                android:buttonTint="?textColor"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:text="@string/dnd_1"
                android:buttonTint="?textColor"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio3"
                android:text="@string/dnd_2"
                android:buttonTint="?textColor"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio4"
                android:text="@string/dnd_3"
                android:buttonTint="?textColor"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>