<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="4"
            android:orientation="horizontal">
                <TextView
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dice_highest"/>
                <EditText
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/highest"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberSigned"/>
                <TextView
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dice_lowest"/>
                <EditText
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/lowest"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberSigned"/>
                <TextView
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:text="@string/dice_reroll"/>
                <EditText
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/reroll"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberSigned"/>
                <TextView
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dice_modifier"/>
                <EditText
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/modifier"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberSigned"/>
        </GridLayout>
</RelativeLayout>